--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -1,6 +1,6 @@
 .main {
   /* position: relative; */
-  padding-top: 110px; /* Offset for fixed navbar (60px) + fixed breadcrumb (50px approx) */
+  padding-top: 82px; /* Offset for fixed navbar (~54px) + fixed breadcrumb (~28px) */
 }
 
 .main.homePage {
